@@ -6,7 +6,7 @@
             One Ring to bring them all and in the darkness bind them
                   In the land of Mordor where the shadows lie"
                                 "Lord of The Rings", J.R.R.Tolkien
-
+ - Detect traps can NOT fail
  - TomeNET 4.0.0 development version (internally 3.5.5a)
  - skill system is being implemented. ('X' or '\X' to check)
  - items can stack on the floor now. (but not inside a house!)
@@ -20,4 +20,4 @@
  - To learn about new features/changes, please see the help screen('?').
 
         Official TomeNET site - http://T-o-M-E.net/pernmangband/
-    PernMAngband 3.x: DarkGod(darkgod@t-o-m-e.net) / TomeNET dev-team
+    PernMAngband 4.x: DarkGod(darkgod@t-o-m-e.net) / TomeNET dev-team
